# minilib

./: Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  pyrightconfig.json  start.sh
core/: models.py  urls.py  utils.py  views.py
core/migrations/: 0001_initial.py
core/templates/: base.html  home.html
core/templates/registration/: login.html
minilib/: asgi.py  settings.py  urls.py  wsgi.py
static/core/: styles.css
static/htmx/: response-targets.js
