[project]
name = "minilib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django-environ==0.11.2",
    "django-htmx>=1.21.0",
    "django==5.1.1",
    "gunicorn==23.0.0",
    "requests==2.32.3",
]

[tool.uv]
dev-dependencies = [
    "basedpyright>=1.22.0",
    "black>=24.8.0",
    "django-stubs>=5.1.1",
    "isort>=5.13.2",
]

[tool.isort]
profile = "black"
